# RouterShell

./: .gitignore  AGENTS.md  CODING_AGENT.md  LICENSE  NOTICE  README.md  _root_privileges():  bridge_db.py  bridge_factory.py  hostadp.conf-parse  hostapd.com  install.sh  lshw.json  pyproject.toml  routershell.py  routershell_version.py  s PrivilegeVerifier:  scan-full.json  scan.json  setup.sh  start.sh  test.py  todo.md  uninstall.sh  wlan0.json
.github/workflows/: ci.yml
config/: RouterCLI.conf  factory-startup.cfg  hostapd-2.4G.conf  startup-config.cfg  startup-config.cfg-20231220230843  startup-config.cfg-20231222111805  startup-config.cfg-20231229120243  startup.config
doc/: Interface.md  arp.md  bridge.md  dhcp.md  faq.md  four_port_bridge_vlan_config.md  global_priv_exec_cmd.md  interface.md  nat.md  route.md  system.md  two_port_nat_config.md  vlan.md
doc/api/: database.md  dnsmasq.md  index.md  system.md
doc/cli/: database.md  dhcp.md  four_port_switch_config.md  global_priv_exec_cmd.md  interface.md  system.md  two_port_nat_config.md  wireless.md
doc/development/: README.md
doc/tests/: software-qa.md
install/: README.md  install-pip.sh  install.sh  uninstall.sh
lib/: arp_config_show-bak.py  arp_config_show.py  bridge_config_show.py  clear_commands.py  common.py  configuration_operation.py  constants.py  dhcpd_config_show.py  global_operation.py  if_config_show.py  ip_route_config_show.py  nat_config_show.py  rename_config.py  router_cli.py  router_prompt.py  run_commands.py  run_config_ultils.py  show_operation.py  sub_command_template.py  sysctl.py  vlan_config_show.py
lib/cli/: arp_config_show.py  bridge_config_show.py  clear_commands.py  cli_main.py  cmd2_global.py  configuration_operation.py  dhcpd_config_show.py  if_config_show.py  ip_route_config_show.py  nat_config_show.py  rename_config.py  router_cli.py  router_main_cli.py  router_prompt.py  run_config_ultils.py  show_operation.py  sub_command_template.py  vlan_config_show.py
lib/common/: cmd2_global.py  common.py  constants.py  inet_ultils.py  os_previlegeVerfier.py  router_prompt.py  router_shell_log_control.py  string_formats.py  strings.py
lib/db/: bridge_db.py  db_schema.sql  dhcp_client_db.py  dhcp_db-bak.py  dhcp_db.py  dhcp_server_db.py  dhcpd_db-bak.py  interface_db.py  nat_db.py  router_config_db.py  router_shell_db.py  routershell.db  system_db.py  vlan_db.py  wifi_db.py
lib/hardware/: hardware_detection.py  network_hardware.py
lib/network_hardware/: interface.py
lib/network_manager/: arp.py  bridge.py  dhcp_client.py  dhcp_server.py  hostadp-config-gen.py  hostapd_config_gen.py  hostapd_mgr.py  inet.py  interface.py  mac.py  nat.py  network_interface_factory.py  network_manager.py  network_mgr.py  phy.py  route.py  run_commands.py  sysctl.py  vlan.py  wireless.py  wireless_wifi.py  wireless_wifi_iw.py
lib/network_services/: dhcp_dnsmasq.py  dhcp_server_service.py  dhcpd.py
lib/servers/: dhcpd.py
lib/system/: copy_cmd.py  copy_mode.py  init_system.py  linux_calls.py  system.py  system_call.py  system_config.py  system_init.py  system_start_up.py
log/commands/: command_log.txt
routershell/: _version.py  cli.py
scripts/: README.md  common.sh  factory-network-settings.sh  first-login-check.sh
src/: factory-reset.py  main.py  test.py
src/routershell/: __init__.py  __main__.py  _version.py  cli.py  logging_config.py
test/: startup.conf
tests/: bridge_db.py  test_packaging.py
tests/install/: test_install_env.py
tests/packaging/: test_entry_points.py  test_hostname_startup.py  test_imports.py  test_interface_auto_discovery.py  test_logging_config.py  test_runtime_database.py  test_typing_contract.py  test_version.py
tests/tools/: test_ci_workflow.py  test_clean_workflow.py  test_qa_checker.py  test_vm_workflow.py
tools/: bridge_control_options.sh  check_drive.sh  clear-pycache.sh  clear-routershell-db.sh  clear_pycache.sh  configure_nat.sh  cpu_hw_summary.py  create-ext4-bootable.sh  create_complete_network.sh  create_ubuntu_install.sh  dhcp_client_simulation.sh  dhcp_server_options.sh  format_drive.sh  gen_dnsmasq_config.py  nat_config.sh  network_hw_detection.py  reset_network.sh  toggle_interface_state.sh  uninstall_dnsmasq.sh  uninstall_kea_server.sh  usb_to_ethernet_find.sh  vlan_create.sh  vlan_destroy.sh  vlan_show.sh  wlan_access_point.sh
tools/agent-review/: 2026-06-13-absolute-path-constants.review.md  2026-06-13-apache-license-alignment.review.md  2026-06-13-ci-platform-support.review.md  2026-06-13-coding-agent-rules.review.md  2026-06-13-commit-msg-git-save-prefix.review.md  2026-06-13-config-file-workflow.review.md  2026-06-13-copy-mode-constant-import.review.md  2026-06-13-development-install-mode.review.md  2026-06-13-development-multipass-install.review.md  2026-06-13-generic-linux-install.review.md  2026-06-13-git-helper-qa-checker.review.md  2026-06-13-hostname-startup-seeding.review.md  2026-06-13-install-baseline-snapshot.review.md  2026-06-13-installer-env-backfill.review.md  2026-06-13-installer-env-files.review.md  (+33 more)
(+331 files in other folders)
